demos/envoy-sni-matcher-policy/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901

# Bootstrap extension required to enable internal listeners
bootstrap_extensions:
- name: envoy.bootstrap.internal_listener
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener

static_resources:
  listeners:
  # 1. Downstream listener that terminates HTTP CONNECT requests
  #    The inner payload is extracted and sent to the internal listener cluster.
  - name: connect_terminating_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_connect
          route_config:
            name: connect_route
            virtual_hosts:
            - name: connect_service
              domains: ["*"]
              routes:
              - match:
                  connect_matcher: {}
                route:
                  cluster: internal_listener_cluster
                  upgrade_configs:
                  - upgrade_type: CONNECT
                    connect_config: {}
          http_filters:
          - name: envoy.filters.http.set_filter_state
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.set_filter_state.v3.Config
              on_request_headers:
              - object_key: ate.policy.egress.sni-passthrough
                factory_key: envoy.string
                format_string:
                  text_format_source:
                    inline_string: "%REQ(ate-sni-passthrough-policy)%"
                shared_with_upstream: ONCE
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          # Support both HTTP/1.1 and HTTP/2 CONNECT requests
          http_protocol_options: {}
          http2_protocol_options:
            allow_connect: true
          upgrade_configs:
          - upgrade_type: CONNECT

  # 2. Internal listener that receives the inner TCP payload from the CONNECT termination.
  #    Uses filter_chain_matcher to select between two filter chains:
  #    - SNI == "www.google.com": SNI dynamic forward proxy + TCP proxy
  #    - Default (all other matches): HTTP dynamic forward proxy via HCM
  - name: inner_payload_internal_listener
    internal_listener: {}
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.dynamic_modules
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.dynamic_modules.v3.DynamicModuleListenerFilter
        dynamic_module_config:
          name: envoy_sni_matcher_policy
        filter_name: envoy_sni_matcher_policy
    filter_chain_matcher:
      matcher_tree:
        input:
          name: filter_state
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.FilterStateInput
            key: sni.passthrough.match
        exact_match_map:
          map:
            "true":
              action:
                name: google_sni_filter_chain
                typed_config:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: google_sni_filter_chain
            "false":
              action:
                name: http_dfp_filter_chain
                typed_config:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: http_dfp_filter_chain
      on_no_match:
        action:
          name: http_dfp_filter_chain
          typed_config:
            "@type": type.googleapis.com/google.protobuf.StringValue
            value: http_dfp_filter_chain
    filter_chains:
    - name: google_sni_filter_chain
      filters:
      - name: envoy.filters.network.sni_dynamic_forward_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig
          port_value: 443
          dns_cache_config:
            name: dynamic_forward_proxy_cache_config
            dns_lookup_family: V4_ONLY
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_proxy_to_destination
          cluster: dynamic_forward_proxy_cluster

    - name: http_dfp_filter_chain
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: internal_http_dfp
          route_config:
            name: http_dfp_route
            virtual_hosts:
            - name: dynamic_forward_proxy_host
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: dynamic_forward_proxy_cluster
          http_filters:
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  # Cluster targeting the internal listener via envoy_internal_address
  - name: internal_listener_cluster
    connect_timeout: 5s
    load_assignment:
      cluster_name: internal_listener_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              envoy_internal_address:
                server_listener_name: inner_payload_internal_listener
    transport_socket:
      name: envoy.transport_sockets.internal_upstream
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport
        transport_socket:
          name: envoy.transport_sockets.raw_buffer
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer

  # Destination cluster using dynamic forward proxy to resolve hosts dynamically via DNS
  - name: dynamic_forward_proxy_cluster
    connect_timeout: 5s
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: V4_ONLY
